k8s/templates/orderservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw8-orderservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw8-orderservice
  template:
    metadata:
      labels:
        app: hw8-orderservice
    spec:
      containers:
        - name: hw8-orderservice
          image: dmitriyburets1982/hw8-orderservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /orderservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /orderservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw8-orderservice-service
spec:
  type: NodePort
  selector:
    app: hw8-orderservice
  ports:
    - name: hw8-orderservice
      protocol: TCP
      port: 80
      targetPort: 8080
