k8s/templates/paymentservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw8-paymentservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw8-paymentservice
  template:
    metadata:
      labels:
        app: hw8-paymentservice
    spec:
      containers:
        - name: hw8-paymentservice
          image: dmitriyburets1982/hw8-paymentservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /paymentservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /paymentservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw8-paymentservice-service
spec:
  type: NodePort
  selector:
    app: hw8-paymentservice
  ports:
    - name: hw8-paymentservice
      protocol: TCP
      port: 80
      targetPort: 8080
